Fix hero whitespacing issue.

--- a/assets/stylesheets/components/_front-page.scss
+++ b/assets/stylesheets/components/_front-page.scss
@@ -200,8 +200,8 @@
 
     .pique-panel-content {
       font-size: 1.5em;
-      margin-top: 7em;
       max-width: $size__site-width;
+      padding-top: 8em;
 
       .entry-content {
         text-align: center;
